--- a/src/main/resources/static/css/output.css
+++ b/src/main/resources/static/css/output.css
@@ -895,9 +895,7 @@ textarea {
 
 label {
   font-size: 0.875rem;
-  /* Equivalent to text-sm */
   color: #374151;
-  /* Equivalent to text-slate-700 */
 }
 
 .container {
@@ -1481,8 +1479,16 @@ label {
   border-bottom-width: 2px;
 }
 
-.border-r {
-  border-right-width: 1px;
+.border-l-2 {
+  border-left-width: 2px;
+}
+
+.border-r-2 {
+  border-right-width: 2px;
+}
+
+.border-t-2 {
+  border-top-width: 2px;
 }
 
 .border-gray-300 {
@@ -1713,6 +1719,11 @@ label {
   line-height: 1.25rem;
 }
 
+.text-xl {
+  font-size: 1.25rem;
+  line-height: 1.75rem;
+}
+
 .text-xs {
   font-size: 0.75rem;
   line-height: 1rem;
@@ -1787,6 +1798,11 @@ label {
   color: rgb(17 24 39 / var(--tw-text-opacity, 1));
 }
 
+.text-red-500 {
+  --tw-text-opacity: 1;
+  color: rgb(239 68 68 / var(--tw-text-opacity, 1));
+}
+
 .text-red-600 {
   --tw-text-opacity: 1;
   color: rgb(220 38 38 / var(--tw-text-opacity, 1));
@@ -1805,11 +1821,6 @@ label {
 .text-slate-600 {
   --tw-text-opacity: 1;
   color: rgb(71 85 105 / var(--tw-text-opacity, 1));
-}
-
-.text-slate-700 {
-  --tw-text-opacity: 1;
-  color: rgb(51 65 85 / var(--tw-text-opacity, 1));
 }
 
 .text-slate-800 {
