--- a/src/main/resources/templates/updateUserDetails.html
+++ b/src/main/resources/templates/updateUserDetails.html
@@ -29,201 +29,232 @@
       </nav>
     </header>
     <main>
-      <div class="profileContainer">
-        <div class="h-auto w-full">
-          <div class="flex flex-col justify-end items-center mt-2 p-2">
-            <h1 class="formHeader">Account Details</h1>
-          </div>
+      <div class="h-auto w-full">
+        <nav class="flex flex-col justify-center items-center mt-2 p-2">
+          <h1 class="formHeader">Account Details</h1>
+        </nav>
 
-          <div class="errorBox">
-            <!-- SUCCESS MESSAGE -->
-            <div id="successMessageDiv" th:if="${message}" th:text="${message}" class="success"></div>
-            <!-- ERROR MESSAGE -->
-            <div id="errorMessageDiv" th:if="${error}" th:text="${error}" class="failure"></div>
-          </div>
-
-          <!-- Username -->
-          <div id="updateUsernameButton" class="grid grid-cols-5 w-full bg-white">
-            <p class=" text-slate-400 flex items-center col-span-1 text-xs p-2 border-y border-r border-slate-200">Username</p>
-            <a id="updateUsername" class="col-span-4 text-sm text-blue-600 p-2 border-y border-slate-200" name="username" th:text="${user?.username ?: ''}"></a>
-          </div>
-          <!-- Name -->
-          <div id="updateNameButton" class="grid grid-cols-5 w-full bg-white">
-            <p class=" text-slate-400 flex items-center col-span-1 text-xs p-2 border-y border-r border-slate-200">Name</p>
-            <a id="name" class="col-span-4 text-sm text-blue-600 p-2 border-y border-slate-200" name="name" th:text="${user?.firstName != null || user?.lastName != null ? (user?.firstName + ' ' + user?.lastName) : 'Add Name'}"></a>
-          </div>
-          <!-- Email -->
-          <div id="updateEmailButton" class="grid grid-cols-5 w-full bg-white">
-            <p class=" text-slate-400 flex items-center col-span-1 text-xs p-2 border-y border-r border-slate-200">Email</p>
-            <a id="updateEmail" class="col-span-4 text-sm text-blue-600 p-2 border-y border-slate-200" name="email" th:text="${user?.email != null ? user?.email : 'Add Email'}"></a>
-          </div>
-          <!-- Password -->
-          <div id="updatePasswordButton" class="grid grid-cols-5 w-full bg-white">
-            <p class=" text-slate-400 flex items-center col-span-1 text-xs p-2 border-y border-r border-slate-200">Password</p>
-            <a id="updatePassword" class="col-span-4 text-sm text-blue-600 p-2 border-y border-slate-200" name="password">Update Password</a>
-          </div>
+        <div class="errorBox">
+          <!-- SUCCESS MESSAGE -->
+          <div id="successMessageDiv" th:if="${message}" th:text="${message}" class="success"></div>
+          <!-- ERROR MESSAGE -->
+          <div id="errorMessageDiv" th:if="${error}" th:text="${error}" class="failure"></div>
         </div>
 
-        <div>
-          <div id="updateBox" class="box p-4 hidden">
-            <!-- USER DETAILS -->
-            <h3 id="accountDetailsHeader" class="formSubHeader"></h3>
+        <!-- Username -->
+        <div id="updateUsernameButton" class="grid grid-cols-5 w-full bg-white">
+          <p class=" text-slate-400 flex items-center col-span-1 text-xs p-2 border-t-2 border-l-2 border border-slate-300">Username</p>
+          <a id="updateUsername" class="col-span-4 text-sm text-blue-600 p-2 border-t-2 border-r-2 border border-slate-300" name="username" th:text="${user?.username ?: ''}"></a>
+        </div>
+        <!-- Name -->
+        <div id="updateNameButton" class="grid grid-cols-5 w-full bg-white">
+          <p class=" text-slate-400 flex items-center col-span-1 text-xs p-2 border-l-2 border  border-slate-300">Name</p>
+          <a id="name" class="col-span-4 text-sm text-blue-600 p-2 border-r-2 border border-slate-300" name="name" th:text="${user?.firstName != null || user?.lastName != null ? (user?.firstName + ' ' + user?.lastName) : 'Add Name'}"></a>
+        </div>
+        <!-- Email -->
+        <div id="updateEmailButton" class="grid grid-cols-5 w-full bg-white">
+          <p class=" text-slate-400 flex items-center col-span-1 text-xs p-2 border-l-2 border border-slate-300">Email</p>
+          <a id="updateEmail" class="col-span-4 text-sm text-blue-600 p-2 border-r-2 border border-slate-300" name="email" th:text="${user?.email != null ? user?.email : 'Add Email'}"></a>
+        </div>
+        <!-- Password -->
+        <div id="updatePasswordButton" class="grid grid-cols-5 w-full bg-white">
+          <p class=" text-slate-400 flex items-center col-span-1 text-xs p-2 border-l-2 border-b-2 border border-slate-300">Password</p>
+          <a id="updatePassword" class="col-span-4 text-sm text-blue-600 p-2 border-r-2 border-b-2 border border-slate-300" name="password">Update Password</a>
+        </div>
+      </div>
 
-            <!-- UPDATE USERNAME FORM-->
-            <form
-              class="hidden flex flex-col items-center justify-center w-full"
-              id="updateUsernameForm" th:action="@{/update_username}" method="post" >
-              <div class="flex flex-col items-center w-full pb-2">
-                <label class="text-sm font-bold text-slate-600" for="username">New Username</label>
-                <input class="input sm:text-sm" type="text" id="updateUsername" name="username" placeholder="New Username" required>
-              </div>
-              <div class="flex flex-col justify-center items-center ">
-                <div class="button bg-blue-600 hover:bg-blue-800 mb-2">
-                  <button class="submitButton" type="submit">
-                    Update
-                  </button>
-                </div>
-                <div class="small-button bg-slate-600 hover:bg-slate-800 mb-2">
-                  <button
-                    id="cancelUpdateUsernameButton"
-                    type="button"
-                    class="cancelButton"
-                  >
-                    Cancel
-                  </button>
-                </div>
-              </div>
-            </form>
+      <div class="flex flex-col items-center justify-center w-full">
+        <div id="updateBox" class="hidden flex flex-col items-center justify-center w-full px-4 pb-4">
+          <!-- USER DETAILS -->
+          <h3 id="accountDetailsHeader" class="text-xl font-bold text-blue-500 p-4"></h3>
 
-            <!-- UPDATE NAME FORM-->
-            <form
-              class="hidden flex flex-col items-center justify-center w-full"
-              id="updateNameForm"
-              th:action="@{/update_name}"
-              method="post">
-              <div class="flex flex-col items-center w-full pb-2">
-                <label class="text-sm font-bold text-slate-600" for="firstName">First Name</label>
-                <input id="firstNameInput" class="col-span-2 text-sm p-2 border-y border-slate-200" name="firstName" placeholder="First Name"></input>
-                <label class="text-sm font-bold text-slate-600"  for="lastName">Last Name</label>
-                <input id="lastNameInput" class="col-span-2 text-sm p-2 border-y border-slate-200" name="lastName" placeholder="Last Name"></input>
+          <!-- UPDATE USERNAME FORM-->
+          <form
+            class="hidden flex flex-col items-center justify-center w-full"
+            id="updateUsernameForm" th:action="@{/update_username}" method="post" >
+            <div class="flex flex-col items-center w-full pb-2">
+              <div class="w-full px-4 pb-2">
+                <div class="flex justify-start w-full">
+                  <label class="label text-xs" for="username">New Username</label>
+                </div>
+                <input class="w-full" type="text" id="updateUsername" name="username" placeholder="New Username" required>
               </div>
-            <div class="button bg-blue-600 hover:bg-blue-800 mb-2">
+            </div>
+            <div class="flex flex-col justify-center items-center ">
+              <div class="button bg-blue-600 hover:bg-blue-800 mb-2">
                 <button class="submitButton" type="submit">
                   Update
                 </button>
               </div>
               <div class="small-button bg-slate-600 hover:bg-slate-800 mb-2">
                 <button
-                    id="cancelUpdateNameButton"
-                    type="button"
-                    class="cancelButton"
-                >Cancel</button>
-              </div>
-            </form>
-
-
-            <!-- UPDATE EMAIL FORM-->
-            <form
-              class="hidden flex flex-col items-center justify-center w-full"
-              id="updateEmailForm"
-              th:action="@{/update_email}"
-              method="post">
-              <div class="flex flex-col items-center w-full pb-2">
-                <label class="text-sm font-bold text-slate-600" for="newEmail">New Email</label>
-                <input class="input sm:text-sm" type="email" id="newEmail" name="newEmail" placeholder="New Email" required>
-                <label class="text-sm font-bold text-slate-600"  for="confirmNewEmail">Confirm New Email</label>
-                <input class="input sm:text-sm" type="email" id="confirmNewEmail" name="confirmNewEmail" placeholder="Confirm New Email" required>
-              </div>
-              <div class="button bg-blue-600 hover:bg-blue-800 mb-2">
-                <button class="submitButton" type="submit">Update</button>
-              </div>
-              <div class="small-button bg-slate-600 hover:bg-slate-800 mb-2">
-                <button
-                  id="cancelUpdateEmailButton"
+                  id="cancelUpdateUsernameButton"
                   type="button"
-                  class="cancelButton">
-                  Cancel</button>
-              </div>
-            </form>
-
-            <!-- UPDATE PASSWORD FORM-->
-            <form
-              class="hidden flex flex-col items-center justify-center w-full"
-              id="updatePasswordForm"
-              th:action="@{/update_password}"
-              method="post">
-              <div class="flex flex-col items-center w-full pb-4">
-                <label class="text-sm font-bold text-slate-600" for="currentPassword">
-                  Current Password
-                </label>
-                <input class="input sm:text-sm" type="password" id="currentPassword" name="currentPassword" placeholder="Current Password" required>
-                <label class="text-sm font-bold text-slate-600" for="newPassword">
-                  New Password
-                </label>
-                <input class="input sm:text-sm" type="password" id="newPassword" name="newPassword" placeholder="New Password" required>
-                <label class="text-sm font-bold text-slate-600" for="confirmNewPassword">
-                  Confirm New Password
-                </label>
-                <input class="input sm:text-sm" type="password" id="confirmNewPassword" name="confirmNewPassword" placeholder="Confirm New Password" required>
-              </div>
-
-              <div class="button bg-blue-600 hover:bg-blue-800 mb-2">
-                <button class="submitButton" type="submit">
-                  Update
+                  class="cancelButton"
+                >
+                  Cancel
                 </button>
               </div>
+            </div>
+          </form>
 
-              <div class="small-button bg-slate-600 hover:bg-slate-800 mb-2">
-                <button
-                id="cancelUpdatePasswordButton"
+          <!-- UPDATE NAME FORM-->
+          <form
+            class="hidden flex flex-col items-center justify-center w-full"
+            id="updateNameForm"
+            th:action="@{/update_name}"
+            method="post">
+            <div class="flex flex-col items-center w-full pb-2">
+              <div class="w-full px-4 pb-2">
+                <div class="flex justify-start w-full">
+                  <label class="label text-xs" for="firstName">First Name</label>
+                </div>
+                <input class="w-full" id="firstNameInput" name="firstName" placeholder="First Name"></input>
+              </div>
+              <div class="w-full px-4 pb-2">
+                <div class="flex justify-start w-full">
+                  <label class="label text-xs"  for="lastName">Last Name</label>
+                </div>
+                <input class="w-full" id="lastNameInput" name="lastName" placeholder="Last Name"></input>
+              </div>
+            </div>
+            <div class="button bg-blue-600 hover:bg-blue-800 mb-2">
+              <button class="submitButton" type="submit">
+                Update
+              </button>
+            </div>
+            <div class="small-button bg-slate-600 hover:bg-slate-800 mb-2">
+              <button
+                  id="cancelUpdateNameButton"
+                  type="button"
+                  class="cancelButton"
+              >Cancel</button>
+            </div>
+          </form>
+
+
+          <!-- UPDATE EMAIL FORM-->
+          <form
+            class="hidden flex flex-col items-center justify-center w-full"
+            id="updateEmailForm"
+            th:action="@{/update_email}"
+            method="post">
+            <div class="flex flex-col items-center w-full pb-2">
+              <div class="w-full px-4 pb-2">
+                <div class="flex justify-start w-full">
+                  <label class="label text-xs" for="newEmail">New Email</label>
+                </div>
+                <input class="w-full" type="email" id="newEmail" name="newEmail" placeholder="New Email" required>
+              </div>
+              <div class="w-full px-4 pb-2">
+                <div class="flex justify-start w-full">
+                  <label class="label text-xs"  for="confirmNewEmail">Confirm New Email</label>
+                </div>
+                <input class="w-full" type="email" id="confirmNewEmail" name="confirmNewEmail" placeholder="Confirm New Email" required>
+              </div>
+            </div>
+            <div class="button bg-blue-600 hover:bg-blue-800 mb-2">
+              <button class="submitButton" type="submit">Update</button>
+            </div>
+            <div class="small-button bg-slate-600 hover:bg-slate-800 mb-2">
+              <button
+                id="cancelUpdateEmailButton"
                 type="button"
                 class="cancelButton">
-                  Cancel</button>
+                Cancel</button>
+            </div>
+          </form>
+
+          <!-- UPDATE PASSWORD FORM-->
+          <form
+            class="hidden flex flex-col items-center justify-center w-full"
+            id="updatePasswordForm"
+            th:action="@{/update_password}"
+            method="post">
+            <div class="flex flex-col items-center w-full pb-4">
+              <div class="w-full px-4 pb-2">
+                <div class="flex justify-start w-full">
+                  <label class="label text-xs" for="currentPassword">
+                    Current Password
+                  </label>
+                </div>
+                <input class="w-full" type="password" id="currentPassword" name="currentPassword" placeholder="Current Password" required>
               </div>
+              <div class="w-full px-4 pb-2">
+                <div class="flex justify-start w-full">
+                  <label class="label text-xs" for="newPassword">
+                    New Password
+                  </label>
+                </div>
+                <input class="w-full" type="password" id="newPassword" name="newPassword" placeholder="New Password" required>
+              </div>
+              <div class="w-full px-4 pb-2">
+                <div class="flex justify-start w-full">
+                  <label class="label text-xs" for="confirmNewPassword">
+                    Confirm New Password
+                  </label>
+                </div>
+                <input class="w-full" type="password" id="confirmNewPassword" name="confirmNewPassword" placeholder="Confirm New Password" required>
+              </div>
+            </div>
 
-            </form>
+            <div class="button bg-blue-600 hover:bg-blue-800 mb-2">
+              <button class="submitButton" type="submit">
+                Update
+              </button>
+            </div>
+
+            <div class="small-button bg-slate-600 hover:bg-slate-800 mb-2">
+              <button
+              id="cancelUpdatePasswordButton"
+              type="button"
+              class="cancelButton">
+                Cancel</button>
+            </div>
+
+          </form>
 
 
-            <!-- DELETE USER FORM -->
-            <form
-              class="hidden flex-col items-center justify-center w-full" id="deleteAccountForm" th:action="@{/delete_user}" method="post" >
-              <input type="hidden" name="_csrf" th:value="${_csrf.token}" />
-              <input type="hidden" name="username" th:value="${user != null ? user.username : ''}" />
-              <div class="flex flex-col items-center w-full pb-2">
-                <label id="confirmDeleteLabel" for="confirmDelete" class="text-sm font-bold text-red-600 m-1" >
+          <!-- DELETE USER FORM -->
+          <form
+            class="hidden flex-col items-center justify-center w-full" id="deleteAccountForm" th:action="@{/delete_user}" method="post" >
+            <input type="hidden" name="_csrf" th:value="${_csrf.token}" />
+            <input type="hidden" name="username" th:value="${user != null ? user.username : ''}" />
+            <div class="flex flex-col items-center w-full pb-2">
+              <div class="w-full px-4 pb-2">
+                <label id="confirmDeleteLabel" for="confirmDelete" class="label text-xs text-red-600" >
                   Type 'DELETE' To Confirm
                 </label>
-                <input
+                <input class="w-full"
                   type="text"
                   id="confirmDelete"
                   name="confirmDelete"
                   placeholder="DELETE"
                   required
-                  class="input focus:border-red-500 focus:ring-red-500 sm:text-sm invalid:border-red-500 invalid:ring-red-500"
                 />
-                <p class="text-xs text-red-600 m-1">This Action Cannot be Undone</p>
               </div>
-              <div class="flex flex-row justify-center items-center mb-2">
-                <button
-                  type="submit"
-                  class="button bg-red-600 hover:bg-red-800">
-                  Delete
-                </button>
-              </div>
-              <div class="flex flex-row justify-center items-center mb-2">
-                <button
-                  id="cancelDeleteButton"
-                  type="button"
-                  class="small-button bg-slate-600 hover:bg-slate-800">
-                  Cancel</button>
-              </div>
-            </form>
-          </div>
+              <p class="text-xs text-red-600 m-1">This Action Cannot be Undone</p>
+            </div>
+            <div class="flex flex-row justify-center items-center mb-2">
+              <button
+                type="submit"
+                class="button bg-red-600 hover:bg-red-800">
+                Delete
+              </button>
+            </div>
+            <div class="flex flex-row justify-center items-center mb-2">
+              <button
+                id="cancelDeleteButton"
+                type="button"
+                class="small-button bg-slate-600 hover:bg-slate-800">
+                Cancel</button>
+            </div>
+          </form>
         </div>
       </div>
     </main>
-    <footer class="bg-slate-100">
-      <nav>
+    <footer>
+      <nav class="bg-slate-50">
         <ul>
           <li></li>
           <li>
