--- a/src/main/resources/templates/itemComment.html
+++ b/src/main/resources/templates/itemComment.html
@@ -42,11 +42,11 @@
     </script>
   </head>
 
-  <body class="flex flex-col h-screen w-full bg-orange-700">
+  <body>
     <header>
-      <nav class="navbar">
-        <ul class="flex justify-between w-full">
-          <li class="flex items-center">
+      <nav>
+        <ul>
+          <li>
             <a id="backButton" href="/collection/${item.collectionId}">
               <span>&#8592;</span>
             </a>
@@ -68,10 +68,11 @@
 
     <main th:id="'item-' + ${item.id}">
       <!-- ITEM NAV -->
-      <div class="h-auto w-full bg-slate-100">
-        <div class="collectionNavbar shadow-sm">
-          <div class="flex justify-between items-center w-full">
-            <ul class="flex justify-start items-center w-full">
+      <div class="collection">
+        <div class="box">
+          <nav>
+          <div class="flex justify-between items-center w-full pr-2">
+            <ul>
               <li class="pr-2">
                 <a
                   th:href="@{/collection/{collectionId}(collectionId=${collection?.id})}"
@@ -96,7 +97,7 @@
               </li>
             </ul>
           </div>
-        </div>
+        </nav>
         <!-- ITEM CONTENT -->
         <div class="flex flex-col justify-center items-center border-size-0">
           <div class="image-container relative bg-white">
@@ -154,11 +155,11 @@
             </button>
           </div>
 
-          <div class="w-full px-2 bg-white">
-            <div class="flex flex-row justify-between w-full h-auto py-1 text-sm">
-              <ul class="flex flex-row justify-start items-center pr-2">
-                <li class="flex flex-row justify-start items-center pr-2">
-                  <div class="flex justify-start items-center">
+          <div class="caption-container">
+            <div class="like-comment-container">
+              <ul>
+                <li>
+                  <div class="element">
                     <form th:if="${item?.id != null}" th:action="@{/items/{id}/like(id=${item?.id})}" method="post">
                       <input type="hidden" name="itemId" th:value="${item.id}" />
                       <input type="hidden" name="userId" th:value="${user.id}" />
@@ -198,7 +199,7 @@
               </div>
             </div>
 
-            <div class="w-full h-auto flex justify-start items-center text-sm">
+            <div class="caption">
               <!-- CAPTION -->
               <p
                 id="toggle_truncate"
@@ -219,17 +220,14 @@
                 ></span>
               </p>
             </div>
-
-            <div class="w-full flex justify-between items-center py-1">
-              <!-- MONTH YEAR -->
-              <div class="w-full flex flex-col justify-center items-start pt-1">
-                <span
-                  style="font-size: 9px"
-                  class="font-extralight"
-                  th:if="${item?.updatedAt != null}"
-                  th:text="${#dates.format(item?.updatedAt, 'MMMM-YYYY')}"
-                ></span>
-              </div>
+            <div class="small-date">
+            <!-- MONTH YEAR -->
+              <span
+                style="font-size: 9px"
+                class="font-extralight"
+                th:if="${item?.updatedAt != null}"
+                th:text="${#dates.format(item?.updatedAt, 'MMMM-YYYY')}"
+              ></span>
             </div>
           </div>
         </div>
@@ -550,7 +548,6 @@
       </div>
     </main>
     <footer>
-
       <nav id="commentActivity" class="w-full">
         <div id="commentInputContainer" class="w-full">
           <form
