fix collection overflow

--- a/src/main/resources/templates/collection.html
+++ b/src/main/resources/templates/collection.html
@@ -34,7 +34,7 @@
     </header>
 
     <!-- COLLECTION CONTENT -->
-    <main th:id="'collection-' + ${collection.id}">
+    <main class="overflow-y-auto" th:id="'collection-' + ${collection.id}">
       <div class="container">
         <div class="box">
           <nav>
