--- a/src/main/resources/templates/popular.html
+++ b/src/main/resources/templates/popular.html
@@ -25,6 +25,25 @@
       </nav>
     </header>
     <main class="overflow-y-auto">
+
+      
+      <!-- ERROR AND SUCCESS HANDLING -->
+      <div class="errorSuccessHandlingBox hidden">
+        <div
+          id="successMessageDiv"
+          class="success"
+          th:if="${message}"
+          th:text="${message}">
+        </div>
+        <div
+          id="errorMessageDiv"
+          class="failure"
+          th:if="${error}"
+          th:text="${error}">
+        </div>
+      </div>
+
+
       <div class="search-container w-full p-2" style="position:relative;">
         <input
           type="text"
