--- a/src/main/resources/static/css/input.css
+++ b/src/main/resources/static/css/input.css
@@ -210,9 +210,9 @@
     justify-content: center;
   }
 
-  .icon-style  {
+  .icon-style {
     font-size: 1.5rem; /* Equivalent to text-2xl */
-    font-weight: bold;  /* Equivalent to font-bold */
+    font-weight: bold; /* Equivalent to font-bold */
   }
 
   .caption-container {
@@ -316,7 +316,6 @@
     padding-left: 0.25rem; /* Equivalent to px-5 */
     padding-right: 0.25rem; /* Equivalent to px-5 */
   }
-
 }
 
 @layer utilities {
@@ -326,7 +325,11 @@
     font-size: 0.875rem;
     font-weight: bold;
     text-align: center;
-    color: #22c55e;
+    width: 100%;
+    padding: auto;
+    border-radius: 0.375rem;
+    color: #fff;
+
     word-wrap: break-word;
   }
 
@@ -336,13 +339,61 @@
     font-size: 0.875rem;
     font-weight: bold;
     text-align: center;
-    color: #ef4444;
+    width: 100%;
+    padding: auto;
+    border-radius: 0.375rem;
+    color: #fff;
     word-wrap: break-word;
   }
 
-  .hidden {
-    display: none;
+.errorSuccessHandlingBox {
+  position: fixed;    /* Use fixed so it stays at the top of the viewport */
+  z-index: 9999;        /* Higher than header/footer */
+  top: 0;
+  left: 0;
+  width: 100%;
+  min-height: 3rem;
+  align-items: center;
+  justify-content: center;
+  font-weight: bold;
+  font-size: 1.1rem;
+  box-shadow: 0 4px 6px rgba(0,0,0,0.08);
+  display: flex;
+}
+
+.slide-in {
+  animation: slide-in 0.7s ease-out forwards;
+}
+
+@keyframes slide-in {
+  from {
+    opacity: 0;
+    transform: translateY(-100%);
   }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+.slide-out {
+  animation: slide-out 0.7s ease-in forwards;
+}
+
+@keyframes slide-out {
+  from {
+    opacity: 1;
+    transform: translateY(0);
+  }
+  to {
+    opacity: 0;
+    transform: translateY(-100%);
+  }
+}
+
+.hidden {
+  display: none !important;
+}
 
   .truncate {
     white-space: nowrap;
@@ -388,4 +439,5 @@
   .search-container {
     position: relative;
   }
+
 }
