--- a/src/main/resources/templates/createCollection.html
+++ b/src/main/resources/templates/createCollection.html
@@ -9,8 +9,26 @@
     <link rel="stylesheet" href="/css/output.css" />
 
     <script th:src="@{/js/previewFile.js}" defer></script>
+    <script th:src="@{/js/fadeAnimations.js}" defer></script>
   </head>
   <body>
+      
+    <!-- ERROR AND SUCCESS HANDLING -->
+<div class="errorSuccessHandlingBox hidden">
+  <div
+    id="successMessageDiv"
+    class="success"
+    th:if="${message}"
+    th:text="${message}">
+  </div>
+  <div
+    id="errorMessageDiv"
+    class="failure"
+    th:if="${error}"
+    th:text="${error}">
+  </div>
+</div>
+
     <header>
       <nav>
         <ul>
@@ -32,6 +50,8 @@
       </nav>
     </header>
     <main class="bottom-0 overflow-y-auto pb-12">
+
+
       <div class="container">
         <nav>
           <span class="w-full text-center text-sm font-semibold text-slate-600">
@@ -56,24 +76,6 @@
               Update Collection Cover
             </span>
           </a>
-        </div>
-
-        <!-- ERROR / SUCCESS -->
-        <div class="errorBox">
-          <!-- SUCCESS MESSAGE -->
-          <div
-            id="successMessageDiv"
-            th:if="${message}"
-            th:text="${message}"
-            style="color: green"
-          ></div>
-          <!-- ERROR MESSAGE -->
-          <div
-            id="errorMessageDiv"
-            th:if="${error}"
-            th:text="${error}"
-            style="color: red"
-          ></div>
         </div>
 
         <form
@@ -123,10 +125,8 @@
 
           <!-- Submit Button -->
           <div class="flex flex-row justify-center items-center mt-4">
-            <button 
-              class="button bg-blue-600 hover:bg-blue-800"
-              type="submit">
-                Create Collection
+            <button class="button bg-blue-600 hover:bg-blue-800" type="submit">
+              Create Collection
             </button>
           </div>
         </form>
