--- a/src/main/resources/templates/createItem.html
+++ b/src/main/resources/templates/createItem.html
@@ -9,8 +9,25 @@
     <link rel="stylesheet" href="/css/output.css" />
 
     <script th:src="@{/js/previewFile.js}" defer></script>
+    <script th:src="@{/js/fadeAnimations.js}" defer></script>
   </head>
   <body>
+    <!-- ERROR AND SUCCESS HANDLING -->
+    <div class="errorSuccessHandlingBox hidden">
+      <div
+        id="successMessageDiv"
+        class="success"
+        th:if="${message}"
+        th:text="${message}"
+      ></div>
+      <div
+        id="errorMessageDiv"
+        class="failure"
+        th:if="${error}"
+        th:text="${error}"
+      ></div>
+    </div>
+
     <header>
       <nav>
         <ul>
@@ -58,24 +75,6 @@
           </a>
         </div>
 
-        <!-- ERROR / SUCCESS -->
-        <div class="errorBox">
-          <!-- SUCCESS MESSAGE -->
-          <div
-            id="successMessageDiv"
-            th:if="${message}"
-            th:text="${message}"
-            style="color: green"
-          ></div>
-          <!-- ERROR MESSAGE -->
-          <div
-            id="errorMessageDiv"
-            th:if="${error}"
-            th:text="${error}"
-            style="color: red"
-          ></div>
-        </div>
-
         <form
           class="flex flex-col w-full items-center justify-center px-4 mt-4"
           th:action="@{/create-item/{collectionId}(collectionId=${collectionId})}"
@@ -93,7 +92,6 @@
             name="itemImage"
             style="display: none"
             accept="image/*"
-            required
           />
 
           <!-- Title Field -->
