--- a/src/main/resources/templates/updateCollection.html
+++ b/src/main/resources/templates/updateCollection.html
@@ -34,6 +34,25 @@
       </header>
 
     <main class="bottom-0 overflow-y-auto">
+
+      
+      <!-- ERROR AND SUCCESS HANDLING -->
+      <div class="errorSuccessHandlingBox hidden">
+        <div
+          id="successMessageDiv"
+          class="success"
+          th:if="${message}"
+          th:text="${message}">
+        </div>
+        <div
+          id="errorMessageDiv"
+          class="failure"
+          th:if="${error}"
+          th:text="${error}">
+        </div>
+      </div>
+
+
       <div class="container">
         <nav>
           <span class="w-full text-center text-sm font-semibold text-slate-600">
@@ -55,23 +74,7 @@
               Update Collection Cover
             </span>
           </a>
-        <!-- ERROR / SUCCESS -->
-        <div class="errorBox">
-          <!-- SUCCESS MESSAGE -->
-          <div
-            id="successMessageDiv"
-            th:if="${message}"
-            th:text="${message}"
-            style="color: green"
-          ></div>
-          <!-- ERROR MESSAGE -->
-          <div
-            id="errorMessageDiv"
-            th:if="${error}"
-            th:text="${error}"
-            style="color: red"
-          ></div>
-        </div>
+
 
         <form 
           class="flex flex-col w-full items-center justify-center px-4 mt-4"
